--- a/src/pages/match/match.scss
+++ b/src/pages/match/match.scss
@@ -1,3 +1,44 @@
 page-match {
+  
+  ion-card {
+    position: relative;
+    text-align: center;
+  }
+
+  ion-card img{
+  }
+  
+  .card-title {
+    position: absolute;
+    top: 5%;
+    font-size: 2.5em;
+    width: 100%;
+    font-weight: bold;
+    color: #fff;
+  }
+
+  .card-subtitle {
+    font-size: 1.5em;
+    position: absolute;
+    top: 15%;
+    width: 100%;
+    color: #fff;
+  }
+
+  .card-text-left {
+    font-size: 1.0em;
+    position: absolute;
+    top: 22%;
+    width: 60%;
+    color: #fff;
+  }
+
+  .card-text-right {
+    font-size: 1.0em;
+    position: absolute;
+    top: 22%;
+    width: 140%;
+    color: #fff;
+  }
 
 }
