--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,44 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+  ion-card {
+    position: relative;
+    text-align: center;
+  }
+
+  ion-card img{
+  }
+  
+  .card-title {
+    position: absolute;
+    top: 5%;
+    font-size: 1.5em;
+    width: 100%;
+    font-weight: bold;
+    color: #fff;
+  }
+
+  .card-subtitle {
+    font-size: 1.5em;
+    position: absolute;
+    top: 10%;
+    width: 100%;
+    color: #fff;
+  }
+
+  .card-text-left {
+    font-size: 1em;
+    position: absolute;
+    top: 18%;
+    width: 50%;
+    color: #fff;
+  }
+
+  .card-text-right {
+    font-size: 1em;
+    position: absolute;
+    top: 18%;
+    width: 150%;
+    color: #fff;
+  }
